# unipipe

./: .gitignore  Cargo.toml  README.md  clippy.toml  inplate.config.js  package-lock.json  package.json
.github/workflows/: ci.yml
examples/: basic.rs  macro_templates.rs
src/: iterator.rs  lib.rs  stream.rs
tests/: advanced_output.rs  basic.rs  compose.rs  generics.rs  generics_1.rs
unipipe/: Cargo.toml
unipipe-macros/: Cargo.toml
unipipe-macros/src/: lib.rs
unipipe/src/: iterator.rs  lib.rs  stream.rs
unipipes/: Cargo.toml  README.md
unipipes/src/: chunk_by.rs  chunk_while.rs  lib.rs  window_by_offset.rs
unipipes/tests/: chunk_by.rs  chunk_while.rs  window_by_offset.rs
