[workspace]
resolver = "3"
members = ["unipipe", "unipipe-macros"]

[package]
name = "unipipe-workspace"
edition = "2024"

[lints.clippy]
collapsible_else_if = "allow"
too_many_arguments = "allow"

[dependencies]
unipipe = { path = "unipipe" }

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }
