[package]
name = "unipipe-macros"
version = "0.2.1"
edition = "2024"
description = "A simple Rust pipe abstraction that extends to iterator and stream."
license = "MIT"
repository = "https://github.com/vilicvane/unipipe"
documentation = "https://docs.rs/unipipe"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.8"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
