[package]
name = "unipipe-macros"
version = "0.3.1"
edition = "2024"
description = "A simple Rust pipe abstraction that extends to iterator and stream."
keywords = ["pipe", "iterator", "stream"]
license = "MIT"
repository = "https://github.com/vilicvane/unipipe"
documentation = "https://docs.rs/unipipe-macros"

[lib]
proc-macro = true

[lints.clippy]
# @inplate {{toml lints.clippy}}
collapsible_else_if = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
# @end

[dependencies]
convert_case = "0.8"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
