[package]
name = "unipipe"
version = "0.2.2"
edition = "2024"
description = "A simple Rust pipe abstraction that extends to iterator and stream."
license = "MIT"
repository = "https://github.com/vilicvane/unipipe"
documentation = "https://docs.rs/unipipe"

[dependencies]
unipipe-macros = { version = "0.2.2", path = "../unipipe-macros" }
