[package]
name = "unipipe"
version = "0.2.5"
edition = "2024"
description = "A simple Rust pipe abstraction that extends to iterator and stream."
keywords = ["pipe", "iterator", "stream"]
license = "MIT"
repository = "https://github.com/vilicvane/unipipe"
documentation = "https://docs.rs/unipipe"

[dependencies]
async-stream = "0.3"
futures = "0.3"
unipipe-macros = { version = "0.2.5", path = "../unipipe-macros" }
