[package]
name = "unipipe"
version = "0.2.11"
edition = "2024"
description = "A simple Rust pipe abstraction that extends to iterator and stream."
keywords = ["pipe", "iterator", "stream"]
license = "MIT"
repository = "https://github.com/vilicvane/unipipe"
documentation = "https://docs.rs/unipipe"

[lints.clippy]
# @inplate {{toml lints.clippy}}
collapsible_else_if = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
# @end

[dependencies]
async-stream = "0.3"
futures = "0.3"
unipipe-macros = { version = "0.2.11", path = "../unipipe-macros" }
