[package]
name = "unipipes"
version = "0.2.3"
edition = "2024"
description = "A small collection of `UniPipe` implementations."
keywords = ["pipe", "iterator", "stream"]
license = "MIT"
repository = "https://github.com/vilicvane/unipipe"
documentation = "https://docs.rs/unipipes"

[lints.clippy]
# @inplate {{toml lints.clippy}}
collapsible_else_if = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
# @end

[dependencies]
unipipe = { version = "0.2.11", path = "../unipipe" }
